--- a/MobileOperator.csproj
+++ b/MobileOperator.csproj
@@ -43,11 +43,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers\Validator.cs" />
+    <Compile Include="Models\Client.cs" />
+    <Compile Include="Models\SimCard.cs" />
+    <Compile Include="Models\SimCardIssue.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Structures\AVLTree.cs" />
+    <Compile Include="Structures\CircularLinkedList.cs" />
+    <Compile Include="Structures\HashTable.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
