Добавлена реализация хэш-таблицы и возможность работы с данными о сим-картах в главном меню

--- a/MobileOperator.csproj
+++ b/MobileOperator.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Tests\HashTableTests.cs" />
     <Compile Include="Helpers\Validator.cs" />
     <Compile Include="Models\Client.cs" />
     <Compile Include="Models\SimCard.cs" />
